update function and clean code

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="repos-container">
         <div class="get-repos">
-            <input type="text" placeholder="Github Username">
-            <span class="get-button">Get Repos</span>
-            <link rel="stylesheet" href="style.css">
+            <input type="text" placeholder="Github Username" id="search">
+            <span class="get-button" id="button">Get Repos</span>
         </div>
-        <div class="show-data">
+        <div class="show-data" id="result">
             <span>No Data To Show</span>
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
 </body>
-</html>
+</html
